# GPU-T2

./: .gitmodules  CMakeLists.txt  README.md  main  main.cpp  resultados.cpp  results.csv
include/: ConwayGame.h
src/: CMakeLists.txt  ConwayGame.cpp  ConwayGameCuda.cu  ConwayGameOpenCL.cpp  ConwayGameSequencial.cpp  ConwayGameSequential.cpp  ConwayKernel.cl
src/kernel/: ConwayBlockKernel.cl  ConwayIfKernel.cl  ConwayKernel.cl
test/: CMakeLists.txt  CudaTest.cpp  OpenCLTest.cpp  SequentialTest.cpp
